Front End frame is complete. Working on INSERT

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon Server/index.js",
-    "react-dev": "webpack --config ./webpack.config.js --mode development -w"
+    "react-dev": "webpack --config ./webpack.config.js --mode development -w",
+    "build-db": "psql postgres < schema.sql"
   },
   "repository": {
     "type": "git",
